2012-07-17         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* configure.ac: Bump version.
	* gawklib.h (gawk_api_varinit_constant): Declare new function.
	(gawk_varinit_constant): New macro.
	* varinit.c (gawk_api_varinit_constant): New function.

2012-07-13         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* configure.ac: Bump version.

2012-07-12         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* gawklib.h (gawk_api_varinit_scalar, gawk_api_varinit_array): New
	helper functions for initializing variables.  To do this, we need
	to include gawkapi.h.
	* strhash.c: Since gawklib.h now includes gawkapi.h, we must include
	it after various system header files.  Also, must undef emalloc
	from gawkapi.h.
	* varinit.c: New file to implement gawk_api_varinit_scalar and
	gawk_api_varinit_array.
	* Makefile.am (libgawklib_la_SOURCES): Add varinit.c.
	* configure.ac (AC_INIT): Bump version.

2012-07-11         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* gawklib.h: Remove dl_load_func_stub, since gawkapi.h dl_load_func
	now has support for an initialization function.
	Stop including config.h or unistd.h, since this goes in /usr/include.
	Following the lead of gawkapi.h.  It is the developer's responsibility
	to have size_t defined.
	* strhash.c: Include config.h and unistd.h before gawklib.h.

2012-07-11         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* m4, build-aux, INSTALL: Remove stuff created by update-autotools.
	* .gitignore: Ignore stuff created by update-autotools: m4, build-aux,
	ABOUT-NLS, and INSTALL.
	* .savannah: Remove cruft from xgawk project.
	* update-autotools: Run autopoint for gettext stuff, exit on error,
	and increase verbosity.
	* configure.ac: Bump version, add AM_GNU_GETTEXT directives,
	check for libintl.h, and restore po/Makefile.in to AC_CONFIG_FILES.
	* Makefile.am (EXTRA_DIST): Add build-aux/config.rpath, and
	remove m4/*ChangeLog.
	(SUBDIRS): Add po.
